# telegram-codex-control

./: .env.example  .gitignore  CHANGELOG.md  README.md  command-policy.example.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: DEPLOYMENT.md  SECURITY.md  SEO.md
docs/architecture/: live-execution-core.md
rust/live-core/: Cargo.toml
rust/live-core/src/: codex.rs  events.rs  main.rs
scripts/: bootstrap.sh  build-live-core.sh  codex-fallback.sh  generate-sbom.sh  install-launch-agent.sh  install-offsite-login-autostart.sh  install-service.sh  install-systemd-user.sh  offsite-start.sh  offsite-status.sh  offsite-stop.sh  offsite-supervisor.sh  release-build.sh  release-secure.sh  run-daemon.sh  sign-artifacts.sh  status-launch-agent.sh  status-service.sh  status-systemd-user.sh  telegram-smoke-test.py  telegram-smoke-test.sh  uninstall-launch-agent.sh  uninstall-offsite-login-autostart.sh  uninstall-service.sh  uninstall-systemd-user.sh
src/telegram_codex_control/: __init__.py  auth.py  bot.py  command_policy.py  config.py  live_events.py  live_renderer.py  main.py  network_diagnostics.py  runner.py  safety.py  store.py  utils.py
tests/: conftest.py  test_acceptance_mvp.py  test_auth.py  test_bot_commands.py  test_command_policy.py  test_config.py  test_live_core_contract.py  test_live_events.py  test_live_renderer.py  test_network_diagnostics.py  test_runner.py  test_safety.py  test_store.py  test_utils.py
tests/fakes/: fake_codex.py  fake_codex_jsonl.py
